# risc-v-compiler

./: .gitignore  CMakeLists.txt  README.md  demo.sh  run_tests.sh
.github/workflows/: ci.yml
cmake/: RunTests.cmake
src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  lexer.l  main.cpp  parser.y
tests/: simple_test.prog  test.prog  test_binary.prog  test_complex.prog  test_complex2.prog  test_i_literal.prog  test_i_print.prog  test_if.prog  test_if_no_braces.prog  test_if_with_braces.prog  test_logical.prog  test_step.prog  test_step2.prog  test_string.prog  test_while.prog  test_while_simple.prog
